--- a/База_рекламаций/reclamationhub/analytics/templates/analytics/analytic.html
+++ b/База_рекламаций/reclamationhub/analytics/templates/analytics/analytic.html
@@ -61,7 +61,7 @@
                 <div class="card-body">
                     <h5 class="card-title">📊 Количественный и финансовый анализ по претензиям</h5>
                     <p class="card-text">Информация о количестве претензий и суммах, выставленных к возмещению и признанных после рассмотрения</p>
-                    <a href="{% url 'claims:dashboard' %}" class="btn btn-primary">Открыть приложение</a>
+                    <a href="{% url 'claims:claim_main' %}" class="btn btn-primary">Открыть приложение</a>
                 </div>
             </div>
         </div>
