--- a/База_рекламаций/reclamationhub/templates/base.html
+++ b/База_рекламаций/reclamationhub/templates/base.html
@@ -96,7 +96,7 @@
 
                             <!-- Аналитика претензий -->
                             <li><h6 class="dropdown-header">Претензии:</h6></li>
-                            <li><a class="dropdown-item" href="{% url 'claims:dashboard' %}">Dashboard претензий</a></li>
+                            <li><a class="dropdown-item" href="{% url 'claims:claim_main' %}">Dashboard претензий</a></li>
                         </ul>
                     </li>
                 </ul>
