--- a/База_рекламаций/reclamationhub/templates/base.html
+++ b/База_рекламаций/reclamationhub/templates/base.html
@@ -27,6 +27,7 @@
 <body>
     <!-- Навигационная панель -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #417690;">
+    <!-- <nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color: #417690;">  sticky-top Закрепляем навигационную панель -->
         <div class="container">
             <a class="navbar-brand" href="{% url 'home' %}">Главная</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -65,20 +66,6 @@
                             <li><a class="dropdown-item" href="{% url 'reports:date_pretence' %}">Даты уведомления по рекламациям</a></li>
                         </ul>
                     </li>
-
-                    <!-- Выпадающее меню для "Аналитика"
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-white" href="{% url 'analytics:analytic' %}">
-                            Аналитика
-                        </a>
-                        <ul class="dropdown-menu position-absolute hover-dropdown">
-                            <li><a class="dropdown-item" href="{% url 'analytics:mileage_chart' %}">Диаграмма по пробегу</a></li>
-                            <li><a class="dropdown-item" href="{% url 'analytics:combined_chart' %}">Диаграммы по датам</a></li>
-                            <li><a class="dropdown-item" href="{% url 'analytics:product_defect' %}">Анализ дефектности по изделию</a></li>
-                            <li><a class="dropdown-item" href="{% url 'analytics:consumer_defect' %}">Анализ дефектности по потребителю</a></li>
-                        </ul>
-                    </li>
-                    -->
                     <!-- Выпадающее меню для "Аналитика" -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white" href="{% url 'analytics:analytic' %}">
